fix small CSS issue on mobile screens

--- a/mStyle.css
+++ b/mStyle.css
@@ -9,4 +9,5 @@
 
 .outerContent {
   height: 800px;
+  margin-bottom: 10px;
 }
